<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/Widget.Android.AppWidget.Container"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/transparent"
    android:theme="@style/AppTheme.AppWidgetContainer">

    <LinearLayout
        android:background="@drawable/rounded"
        style="@style/Widget.Android.AppWidget.InnerView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:orientation="vertical">

        <LinearLayout
            style="@style/Widget.Android.AppWidget.InnerView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_margin="0dp"
            android:layout_marginBottom="0dp"
            android:background="@color/background"
            android:orientation="horizontal"
            android:padding="0dp"
            android:paddingStart="5dp">

            <TextView
                style="@style/Widget.Android.AppWidget.Text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:layout_marginStart="2dp"
                android:layout_marginBottom="0dp"
                android:contentDescription="@string/wodwidget_label"
                android:paddingBottom="0dp"
                android:paddingTop="3dp"
                android:text="@string/wodwidget_label"
                android:textSize="12sp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            style="@style/Widget.Android.AppWidget.InnerView"
            android:padding="0dp"
            android:layout_width="match_parent"
            android:background="@color/background"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/wodwidget_word"
                style="@style/Widget.Android.AppWidget.Text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:contentDescription="@string/wodwidget_word"
                android:fontFamily="@font/ibm_plex_serif_bold"
                android:text="@string/wodwidget_word"
                android:textSize="32sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/wodwidget_nature"
                style="@style/Widget.Android.AppWidget.TextSecondary"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="viewEnd"
                android:layout_marginEnd="8dp"
                android:contentDescription="@string/wodwidget_nature"
                android:fontFamily="@font/ibm_plex_serif_bold"
                android:text="@string/wodwidget_nature"
                android:textSize="19sp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="start|center_vertical"
            android:orientation="horizontal">


            <TextView
                android:id="@+id/wodwidget_phoneme"
                style="@style/Widget.Android.AppWidget.TextSecondary"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="8dp"
                android:layout_marginBottom="8dp"
                android:contentDescription="@string/wodwidget_phoneme"
                android:fontFamily="@font/ibm_plex_serif_bold"
                android:text="@string/wodwidget_phoneme"
                android:textSize="17sp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="start|center_vertical"
            android:orientation="horizontal">


            <TextView
                android:id="@+id/wodwidget_definition"
                style="@style/Widget.Android.AppWidget.TextTertiary"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="8dp"
                android:layout_marginBottom="8dp"
                android:contentDescription="@string/wodwidget_desc"
                android:fontFamily="@font/ibm_plex_serif_bold"
                android:text="@string/wodwidget_desc"
                android:textSize="15sp"
                android:textStyle="bold" />
        </LinearLayout>


    </LinearLayout>


</RelativeLayout>